src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Badger Opportunity</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0 - No Stages Started</fullName>
        </values>
        <values>
            <fullName>1 - Top Account</fullName>
        </values>
        <values>
            <fullName>2 - Account Qualification</fullName>
        </values>
        <values>
            <fullName>3 - Opportunity Identification</fullName>
        </values>
        <values>
            <fullName>4 - Technical Approval</fullName>
        </values>
        <values>
            <fullName>5 - Proposal</fullName>
        </values>
        <values>
            <fullName>6 - Proposal Outcome</fullName>
        </values>
        <values>
            <fullName>7 - Receive Order</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_s_State_Province__c</fullName>
        <formula>Account.BillingState</formula>
        <label>Account&apos;s State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Description__c</fullName>
        <label>Application Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Applications_of__c</fullName>
        <label>Applications of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Flow Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calibration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Calculator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluid Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCADA Connectivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAS Connectivity (HVAC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Vibrators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Meter Reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Meter Analytics</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Badger_Meter_Email__c</fullName>
        <defaultValue>$Setup.SystemIds__c.Badger_Meter_Sales__c</defaultValue>
        <label>Badger Meter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BigMachines__Line_Items__c</fullName>
        <label>Line Items</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <inlineHelpText>The source system that supplied Salesforce with this record.</inlineHelpText>
        <label>Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FourthShift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pivotal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BigMachines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_User_Information__c</fullName>
        <inlineHelpText>Any details on the End User Company that may not be captured elsewhere (e.g., related Account record)</inlineHelpText>
        <label>End User Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_To__c</fullName>
        <label>Competed Against</label>
        <picklist>
            <picklistValues>
                <fullName>ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW-Lake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baumann (Fisher((Emerson)))</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endress &amp; Hauser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuji Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Panametrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoffer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kammer (Flowserve)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kamstrup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Krohne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Flow (Jordan ((Richards Industry)))</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masoneilan (GE Energy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McCrometer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MicroMotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northrock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onicon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oztec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rosemount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seametrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbines Inc / Primary Flow Signal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Sales_Channel_Partner__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pivotal_Opportunity_Id__c</fullName>
        <externalId>true</externalId>
        <label>Pivotal Opportunity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Product_Solutions__c</fullName>
        <label>Primary Product Solution(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badger Meter - Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badger Meter - Mag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blancett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coriolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cox Turbine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Industrial - Impeller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynasonics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flo-tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racine Vortex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remag Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Control Valve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calibration Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cox Calibrators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Site Service</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product Lines of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Badger Touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blancett Turbine Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coriolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cox Turbine Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Acquisition / Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Industrial Impeller Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispensing System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynasonic Ultrasonic Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Series Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flo-tech Testers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Dynamics Calibration Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Dynamics Training Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galaxy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedland Variable Area Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Oval Gear (IOG) Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Turbo Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MeasureRite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M-Series Mag Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preso DP Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racine Vortex Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recordall PD Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Control Valves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision Turbine Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyco Tools</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep</label>
        <referenceTo>Rep__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <formula>Account.Sales_Region__r.Name</formula>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_1_yr_anniversary_reminder_follo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create 1yr Anniversary Followup Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_thank_you_note__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send thank you note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Notes_By__c</fullName>
        <label>Technical Notes By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Notes__c</fullName>
        <label>Technical Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Win_Loss_Notes__c</fullName>
        <label>Win / Loss Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Win_Loss_Reason__c</fullName>
        <label>Win/Loss Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Availability and/or lead time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Canceled Bid</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Central_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>Primary_Product_Solutions__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Region__c</field>
            <operation>equals</operation>
            <value>Central</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>CKran</value>
        </filters>
        <label>All Central Ind. Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Mountain_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>Primary_Product_Solutions__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Region__c</field>
            <operation>equals</operation>
            <value>Mountain</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>CKran</value>
        </filters>
        <label>All Mountain Ind. Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Northeast_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Owner__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>Primary_Product_Solutions__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Region__c</field>
            <operation>equals</operation>
            <value>Northeast</value>
        </filters>
        <label>All Northeast Ind. Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Preso_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Partner__c</columns>
        <columns>Application_Description__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Product_Solutions__c</field>
            <operation>includes</operation>
            <value>Preso</value>
        </filters>
        <label>All Preso Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_RCV_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Partner__c</columns>
        <columns>Application_Description__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Product_Solutions__c</field>
            <operation>includes</operation>
            <value>Research Control Valve</value>
        </filters>
        <label>All RCV Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_South_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>Primary_Product_Solutions__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Region__c</field>
            <operation>equals</operation>
            <value>South</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>CKran</value>
        </filters>
        <label>All South Ind. Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Southeast_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>Primary_Product_Solutions__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Region__c</field>
            <operation>equals</operation>
            <value>Southeast</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>CKran</value>
        </filters>
        <label>All Southeast Ind. Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_West_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>Primary_Product_Solutions__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Region__c</field>
            <operation>equals</operation>
            <value>West</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>CKran</value>
        </filters>
        <label>All West Ind. Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Won_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Win_Loss_Notes__c</columns>
        <columns>Win_Loss_Reason__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Won Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>CloseOpportunity</fullName>
        <active>true</active>
        <businessProcess>Badger Opportunity</businessProcess>
        <label>Closed Opportunity</label>
    </recordTypes>
</CustomObject>